--- a/templates/weatherMan.html
+++ b/templates/weatherMan.html
@@ -52,6 +52,9 @@
                 <td>
                     <button class="removeBtn modifyBtns">Remove</button>
                 </td>
+                <td>
+                    <button class="updateBtn modifyBtns">Update</button>
+                </td>
             </tr>
         </table>
 
