--- a/static/css/weatherMan.css
+++ b/static/css/weatherMan.css
@@ -75,6 +75,14 @@ input:hover {
     padding: 4px;
 }
 
+.updateBtn {
+    border: 1px solid black;
+    background: blue;
+    color: white;
+    padding: 4px;
+
+}
+
 .modifyBtns:hover {
     border-width: 3px;
     cursor: pointer;
